# sentiment-analysis

./: .pre-commit-config.yaml  infer.py  predictions.csv  preprocessing.py  pyproject.toml  train.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
