[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "project for sentiment_analysis task"
authors = ["natalya.kozemaslova <knw333@mail.ru>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
pymorphy2 = "^0.9.1"
nltk = "^3.8.1"
multiprocess = "^0.70.15"
tqdm = "^4.66.1"
catboost = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
